<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="inacap.otto.seguroapp.ResultActivity"
    android:gravity="center_horizontal">

    <TextView
        android:hint="@string/hint_patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_patente"
        android:hint="@string/hint_patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:hint="@string/hint_marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_marca"
        android:hint="@string/hint_marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:hint="@string/hint_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_modelo"
        android:hint="@string/hint_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:hint="@string/hint_anho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_anho"
        android:hint="@string/hint_anho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:hint="Antiguedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_antiguedad"
        android:hint="antiguedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:hint="@string/hint_valoruf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_valoruf"
        android:hint="@string/hint_valoruf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:hint="@string/hint_valorseguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_valorseguro"
        android:hint="@string/hint_valorseguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txv_esasegurable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="center"
        />
    <ImageView
        android:id="@+id/imv_resultado"
        android:layout_width="300px"
        android:layout_height="300px"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/btn_volver"
        android:text="@string/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        />
</LinearLayout>
